# Vulkan

./: .gitignore  test  test.c
SimpleVulkanGame_C/: Bito_C  CMakeLists.txt  main.c
SimpleVulkanGame_C++/: Bito_C++
SimpleVulkanGame_C/src/: CMakeLists.txt  main.c
VulkanTest/: HelloWorld  HelloWorld.c  MakeFile
VulkanTest1/: HelloWorld1  makefile
my/books/: Vulkan_руководство_разработчика.docx  Vulkan_руководство_разработчикаUTF8.txt  learn_MakeFile  make_file_cookbook
my/info/: Vulkan_VSCode_extention  Vulkan_inst_conf  Vulkan_roadmap  export_vulkn_sdk_to_the)project_directory  vulkan_environment_variables  www
my/info/Vulkan/: Getting_started_with_vulkan_SDK  HelloWord.c  HelloWord.cpp  HelloWorld1.c  Vulkan_get_started  determine_GLFW_installed  find_path_to_installed_vulkan_sdk  run_Vulkan_HelloWorld  set_Vulkan_SDK_environment_variables  vulkan_info
my/info/bush/: bash_commands
my/info/cmake/: CMakeLists copy.txt  cmake_C  cmake_C++  setup_cmake_internal_variables
my/info/gcc/: gcc_commands  gcc_flags
my/info/git/: add_dir_to_gitignore  gist  git_add  git_discard_commit
my/info/make/: info  make
my/info/misc/: www
my/work/: diary
